--- a/src/main/resources/templates/word-zh_CN.html
+++ b/src/main/resources/templates/word-zh_CN.html
@@ -81,7 +81,7 @@
 <div style="width:1000px; margin: 0 auto">
     <div>
         <p class="doc_title" th:text="${info.title +'（'+ info.version +'）'}"></p>
-        <a class="download_btn" th:if="${download == 1}" th:href="${'/downloadWord?url='+ url}">下载文档</a>
+        <a class="download_btn" th:if="${download == 1}" th:href="${'/downloadWord'}">下载文档</a>
         <br>
     </div>
     <div th:each="tableMap:${tableMap}" style="margin-bottom:20px;">
