添加字段描述

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,11 +5,11 @@
     <title>Swagger2Word</title>
 </head>
 <body>
-<h1>Swagger2word</h1>
+<h1>Swagger2Word</h1>
 <p>将swagger json文档转化为html并下载为doc文档，支持转化URL，JSON文件，JSON字符串。</p>
 <p><a href="/swagger-ui.html">Swagger文档</a></p>
 <div style="background-color:#FFF4A3;">
-    <p>转化swagger文档</p>
+    <p>转化Swagger 2.0文档</p>
     <form action="/swaggerToWord" method="post" enctype="multipart/form-data">
         <label for="url">URL:</label><br>
         <input type="text" id="url" name="url"><br>
@@ -22,7 +22,7 @@
     </form>
 </div>
 <div style="background-color:#D9EEE1;">
-    <p>转化Open API文档</p>
+    <p>转化Open API 3.0文档</p>
     <form action="/openApiToWord" method="post" enctype="multipart/form-data">
         <label for="url">URL:</label><br>
         <input type="text" id="url" name="url"><br>
