更新模板,支持显示enum类型的信息，说明中支持换行

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="">
 <head>
-    <meta charset="utf8"/>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Swagger2Word</title>
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
 <h1>Swagger2Word</h1>
@@ -11,12 +13,12 @@
 <div style="background-color:#FFF4A3;">
     <p>转化Swagger 2.0文档</p>
     <form action="/swaggerToWord" method="post" enctype="multipart/form-data">
-        <label for="url">URL:</label><br>
-        <input type="text" id="url" name="url"><br>
-        <label for="jsonFile">JSON文件:</label><br>
-        <input type="file" id="jsonFile" name="jsonFile"><br>
-        <label for="jsonStr">JSON字符串:</label><br>
-        <input type="text" id="jsonStr" name="jsonStr"><br>
+        <label for="url2">URL:</label><br>
+        <input type="text" id="url2" name="url"><br>
+        <label for="jsonFile2">JSON文件:</label><br>
+        <input type="file" id="jsonFile2" name="jsonFile"><br>
+        <label for="jsonStr2">JSON字符串:</label><br>
+        <input type="text" id="jsonStr2" name="jsonStr"><br>
         <br><br>
         <input type="submit" value="转化">
     </form>
@@ -24,12 +26,12 @@
 <div style="background-color:#D9EEE1;">
     <p>转化Open API 3.0文档</p>
     <form action="/openApiToWord" method="post" enctype="multipart/form-data">
-        <label for="url">URL:</label><br>
-        <input type="text" id="url" name="url"><br>
-        <label for="jsonFile">JSON文件:</label><br>
-        <input type="file" id="jsonFile" name="jsonFile"><br>
-        <label for="jsonStr">JSON字符串:</label><br>
-        <input type="text" id="jsonStr" name="jsonStr"><br>
+        <label for="url3">URL:</label><br>
+        <input type="text" id="url3" name="url"><br>
+        <label for="jsonFile3">JSON文件:</label><br>
+        <input type="file" id="jsonFile3" name="jsonFile"><br>
+        <label for="jsonStr3">JSON字符串:</label><br>
+        <input type="text" id="jsonStr3" name="jsonStr"><br>
         <br><br>
         <input type="submit" value="转化">
     </form>
